--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,16 +12,23 @@ jobs:
       uses: actions/checkout@v2.0.0
       with:
         fetch-depth: 1
-    - name: Create .pdfs
-      uses: chfanghr/md-to-pdf@v0.1.2
-      env: {PDF_DIR: './pdfs'}
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v1.6.1
+    - name: Compile LaTeX document
+      uses: xu-cheng/latex-action@v2
+      with:
+        root_file: resume_ronak_sakhuja.tex
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: resume_ronak_sakhuja.pdf
       env:
-        # The token is built in to actions. No config required.
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COMMIT_MESSAGE: Add .pdf files.
-        PULL_REQUEST_TITLE: Add .pdf files.
-        PULL_REQUEST_BRANCH: pdf-add
-        PULL_REQUEST_BODY: Here's the PDF File
-        PULL_REQUEST_REVIEWERS: scottypate
+#     - name: Create Pull Request
+#       uses: peter-evans/create-pull-request@v1.6.1
+#       env:
+#         # The token is built in to actions. No config required.
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         COMMIT_MESSAGE: Add .pdf files.
+#         PULL_REQUEST_TITLE: Add .pdf files.
+#         PULL_REQUEST_BRANCH: pdf-add
+#         PULL_REQUEST_BODY: Here's the PDF File
+#         PULL_REQUEST_REVIEWERS: scottypate
