--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
             - name: Compile LaTeX document
               uses: xu-cheng/latex-action@v2
               with:
-                  root_file: ronak_sakhuja_resume.tex.tex
+                  root_file: ronak_sakhuja_resume.tex
 
             - name: Post Processing
               run: |
