--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,18 @@ jobs:
             - name: Git add
               run: git add ronak_sakhuja_resume.pdf
               
-            - name: Deploy to GitHub Pages
-              uses: JamesIves/github-pages-deploy-action@4.1.4
+            - uses: actions/checkout@v2
               with:
-                  BRANCH: gh-pages
-                  FOLDER: build
-                  CLEAN: true
+                persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+                fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
+            - name: Commit files
+              run: |
+                git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+                git config --local user.name "github-actions[bot]"
+                git commit -m "Add changes" -a
+            - name: Push changes
+              uses: ad-m/github-push-action@master
+              with:
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                branch: master
+
